--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = A playground for experimenting with different approaches to responsive images built with Polymer.
+[access "refs/*"]
+	owner = group user/Jack Matthews (jackhkmatthews)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Jack Matthews (jackhkmatthews)
+	label-Verified = -1..+1 group user/Jack Matthews (jackhkmatthews)
+	push = group user/Jack Matthews (jackhkmatthews)
+	read = group user/Jack Matthews (jackhkmatthews)
+	rebase = group user/Jack Matthews (jackhkmatthews)
+	removeReviewer = group user/Jack Matthews (jackhkmatthews)
+	submit = group user/Jack Matthews (jackhkmatthews)
+[access "refs/heads/*"]
+	create = group user/Jack Matthews (jackhkmatthews)
+	push = +force group user/Jack Matthews (jackhkmatthews)
+	pushMerge = group user/Jack Matthews (jackhkmatthews)
+	read = group user/Jack Matthews (jackhkmatthews)
+[access "refs/tags/*"]
+	push = group user/Jack Matthews (jackhkmatthews)
+	push = +force group user/Jack Matthews (jackhkmatthews)
